[package]
name = "crypto-wasi"
version = "0.1.0"
edition = "2021"
authors = ["Puellaquae <shentukeqin@hotmail.com>"]
repository = "https://github.com/Puellaquae/crypto-wasi"
keywords = ["wasi", "crypto", "wasm"]
description = "wasi-crypto wrapper with nodejs's `crypto` style"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
